# charge_model_study

./: MANIFEST.in  README.md  concat_dataframes.py  environment.yaml  pyproject.toml  setup.cfg  setup.py
charge_model_study/: __init__.py  _version.py  config.py  filenames.py  qm.py  symmetries.py
charge_model_study.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: README.md
scripts/01_curate-data/: subset_freesolv_output.csv
scripts/02_generate-conformers/: component_mappings.csv  generate_conformers.py  mapped_smiles.json
scripts/03_generate-esps/: extract_qm_dipoles.py  run_qm.py
scripts/04_calculate-charges/: calculate_am1_charges.py  calculate_qm_charges.py  calculate_qm_conformer_charges_all.py
scripts/04_calculate-charges/collated/: collated_charges.csv
scripts/05_hfe-gmx/: edit_openff_tops.py  generate_gmx_inputs.py  write_starting_itps.py
scripts/05_hfe-gmx/mdps/: min.mdp
scripts/05_hfe-gmx/mdps/lambda-min/: min-lambda-0.mdp  min-lambda-1.mdp  min-lambda-10.mdp  min-lambda-11.mdp  min-lambda-12.mdp  min-lambda-13.mdp  min-lambda-14.mdp  min-lambda-15.mdp  min-lambda-16.mdp  min-lambda-17.mdp  min-lambda-18.mdp  min-lambda-19.mdp  min-lambda-2.mdp  min-lambda-3.mdp  min-lambda-4.mdp  min-lambda-5.mdp  min-lambda-6.mdp  min-lambda-7.mdp  min-lambda-8.mdp  min-lambda-9.mdp
scripts/05_hfe-gmx/mdps/lambda-npt/: npt-lambda-0.mdp  npt-lambda-1.mdp  npt-lambda-10.mdp  npt-lambda-11.mdp  (+16 more)
scripts/06_compute-properties/: compute_esp.py
scripts/07_calculate-hfes/: compute_all_hfe.py
scripts/08_compare-properties/: compare_properties.py
(+47 files in other folders)
